<resources>
    <string name="app_name">Lovidu</string>

    <!--    List Nama Hewan-->
    <string name="hewan1">Kucing</string>
    <string name="hewan2">Anjing</string>
    <string name="hewan3">Sapi</string>
    <string name="hewan4">Domba</string>
    <string name="hewan5">Kuda</string>
    <string name="hewan6">Ayam</string>

    <!--    List Nama Organ-->
    <string name="organ1">Mata</string>
    <string name="organ2">Telinga</string>
    <string name="organ3">Bibir</string>
    <string name="organ4">Hidung</string>
    <string name="organ5">Tangan</string>
    <string name="organ6">Kaki</string>

    <!--    List Nama Bangun Ruang-->
    <string name="bangun_ruang_1">Kubus</string>
    <string name="bangun_ruang_2">Balok</string>
    <string name="bangun_ruang_3">Limas Segitiga</string>
    <string name="bangun_ruang_4">Prisma Segitiga</string>
    <string name="bangun_ruang_5">Bola</string>
    <string name="bangun_ruang_6">Kerucut</string>
    <string name="bangun_ruang_7">Silinder</string>

    <!--    String Layout-->
    <string name="credit">&#169; 2023 MasdikaIlhanMansiz</string>
    <string name="main_menu_title">Selamat Datang!</string>
    <string name="main_menu_desc">Silahkan pilih menu!</string>
    <string name="nama_hewan_option">Nama Hewan</string>
    <string name="operasi_matematika_option">Operasi\nMatematika</string>
    <string name="anggota_tubuh_manusia_option">Anggota tubuh\nmanusia</string>
    <string name="bangun_ruang_option">Bangun Ruang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>